--- a/01/project/templates/reviews/index.html
+++ b/01/project/templates/reviews/index.html
@@ -9,12 +9,15 @@
   <body>
     <h1>Reviews</h1>
     <hr>
+    <a href="{% url 'reviews-add' %}" class="btn btn-success">Add review</a>
+    <hr>
     <table class="table">
         <thead>
           <tr>
             <th scope="col">#</th>
             <th scope="col">Name</th>
             <th scope="col">Review</th>
+            <th scope="col">Rating</th>
             <th scope="col">Options</th>
           </tr>
         </thead>
@@ -24,6 +27,8 @@
             <th scope="row">{{ item.id }}</th>
             <td>{{ item.name }}</td>
             <td>{{ item.review }}</td>
+            <td>{{ item.rating }}</td>
+            <!-- rating==1 :( .... rating==5 :)-->
             <td>OPTIONS</td>
           </tr>
            {% empty %}
