--- a/03/project/templates/index.html
+++ b/03/project/templates/index.html
@@ -11,7 +11,7 @@
     <div class="container my-5">
         <div class="p-5 text-center bg-body-tertiary rounded-3">
           <svg class="bi mt-4 mb-3" style="color: var(--bs-indigo);" width="100" height="100"><use xlink:href="#bootstrap"/></svg>
-          <img src="{% static 'home.jpg' %}" alt="" class="img-responsive" />
+          <img src="{% static 'home.jpg' %}" alt="" class="img-fluid" />
           <h1 class="text-body-emphasis">AI Jobs</h1>
           <p class="col-lg-8 mx-auto fs-5 text-muted">
             AI Jobs te da las mejores recomendaciones laborales usando IA.
